# mcp-server-tester-sse-http-stdio

./: .gitignore  BEARER_AUTH.md  CONTRIBUTING.md  Dockerfile  FINAL_REPORT.md  GITHUB_SETUP.md  LICENSE  LICENSE-COMMERCIAL  PUBLISHING_GUIDE.md  PYTHON_WRAPPER_VALIDATION_REPORT.md  README-OLD.md  README.md  README.ru.md  commands_extracted.json  eslint.config.js  package-lock.json  package.json  platform-update.txt  sync_report.md  test-token-update.txt  token-test.txt  tsconfig.json  vitest.config.ts
.github/workflows/: docker-publish.yml  dockerhub-description.yml  npm-publish.yml  pypi-publish.yml
.serena/: project.yml
docs/: AI-FRIENDLY-README-GUIDE.md  CLEAN_REPO_INSTRUCTIONS.md
examples/: EXAMPLES.md  crawl4ai-http-config.json  crawl4ai-http-tests.yaml  crawl4ai-stdio-config.json  crawl4ai-stdio-tests.yaml  evals-advanced.yaml  evals-basic.yaml  graphiti-sse-config.json  graphiti-sse-tests.yaml  test-mcp-server.js  test-mcp-server.json  tools-advanced.yaml  tools-basic.yaml  unified-basic.yaml
python-wrapper/: DOCKER_HUB_DESCRIPTION.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup.py.bak.deprecated
python-wrapper/.github/workflows/: dockerhub-description.yml
python-wrapper/docker/: entrypoint.sh
python-wrapper/examples/: basic_usage.py.bak
python-wrapper/scripts/: sync.sh  sync_commands.js  sync_commands.py  sync_commands.py.bak
python-wrapper/src/mcp_server_tester/: __init__.py  __main__.py  cli.py  cli.py.bak  core.py  core.py.bak  exceptions.py  exceptions.py.bak
python-wrapper/src/mcp_server_tester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-wrapper/tests/: test_cli.py  test_cli.py.bak  test_core.py
src/: cli.ts
src/mcp_server_tester/: cli_generated.py
src/schemas/: server-config-schema.json  tests-schema.json
test/: setup.ts
test/e2e/: server-launcher.ts
test/fixtures/: test-server-config.json  valid-capabilities.yaml  valid-evaluation.yaml  valid-integration.yaml
test/unit/: SdkBasedJsonRpcTests.test.ts  SdkErrorDetector.test.ts  cli.test.ts  config-loader.test.ts  doctor.test.ts  junit-xml-formatter.test.ts  providers.test.ts  schema.test.ts  (+2 more)
tests/: README.md
(+63 files in other folders)
